[tool.poetry]
name = "wagtail-org"
version = "2.2.0"
description = "The wagtail.org Wagtail site"
authors = ["Torchbox <hello@torchbox.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "wagtailio"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"
django = "~5.1.5"
wagtail = "~6.3.2"
psycopg = "~3.2"
gunicorn = "~23.0.0"
dj-database-url = "~2.3.0"
django-basic-auth-ip-whitelist = "~0.6"
django-csp = "~3.8"
django-manifest-loader = "~1.0.0"
django-pattern-library = "~1.3.0"
django-permissions-policy = "~4.25"
django-referrer-policy = "~1.0"
django-storages = { version ="~1.14", extras = ["s3"] }
markdown = "~3.7"
pygments = "~2.19"
requests = "~2.32.3"
scout-apm = "~3.3"
sentry-sdk = "~2.22"
wagtail-font-awesome-svg = "~1.0.1"

wagtailmedia = "~0.15.2"
whitenoise = "~6.9"
django-redis = "~5.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.1.0"
djhtml = "3.0.7"
ruff = "0.9.6"  # keep in sync with .pre-commit-config.yaml
