[tool.poetry]
name = "wagtail-org"
version = "2.2.0"
description = "The wagtail.org Wagtail site"
authors = ["Torchbox <hello@torchbox.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "wagtailio"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.14"
django = "~6.0.1"
wagtail = "~7.3"
psycopg = "~3.3"
gunicorn = "~23.0.0"
dj-database-url = "~3.0.0"
django-basic-auth-ip-whitelist = "~0.8"
django-csp = "~3.8"
django-manifest-loader = "~1.0.0"
django-pattern-library = "~1.5.0"
django-permissions-policy = "~4.28"
django-storages = { version ="~1.14", extras = ["s3"] }
markdown = "~3.10"
pygments = "~2.19"
requests = "~2.32.3"
scout-apm = "~3.5"
sentry-sdk = "~2.47"
wagtail-font-awesome-svg = "~2.0"

wagtailmedia = "~0.17"
whitenoise = "~6.11"
django-redis = "~6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.5.0"
djhtml = "3.0.10"
ruff = "0.14.8"  # keep in sync with .pre-commit-config.yaml
